ingress/routes/argocd.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`argocd.sandbox.lab`)
    kind: Rule
    services:
    - name: argocd-server
      port: 443
      scheme: https
      serversTransport: argocd-tls
  tls: {}
