ingress/routes/grafana.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: observability
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`grafana.sandbox.lab`)
    kind: Rule
    services:
    - name: victoria-metrics-k8s-stack-grafana
      port: 80
  tls: {}
